# payments

./: .flaskenv  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py  variables.sh.template
.github/workflows/: deploy.yml
signup/: wsgi.py
signup/gui/: package.json  webpack.config.js
signup/gui/src/: index.html  index.js
signup/gui/src/components/: App.jsx
signup/server/: __init__.py  routes.py
uqcs/: __init__.py  admin.py  app.py  base.py  models.py  workers.py
uqcs/emails/: email.mako  email.mtxt
uqcs/scripts/: populate_mailchimp.py
uqcs/static/: bootstrap.min.css  data-postgrad-select2.json  data-undergrad-select2.json  form.js  programs.json  programs_with_majors.json
uqcs/templates/: accept.mako  admin.mako  base.mako  cancel.mako  checkout.mako  complete.mako  form.mako  list.mako
util/: README.md  format.py  pgpg.json  programs.json  programs_with_majors.json  scrape.js  ugpg.json
